Update Short Assignment 4.ipynb

--- a/Short Assignment 4.ipynb
+++ b/Short Assignment 4.ipynb
@@ -159,7 +159,8 @@
     "        for k in range(NumComponents):\n",
     "            ## Complete M-step: Update parameters\n",
     "            #Means\n",
-    "            Means[k,:] = X*pZ_X[:,k]/sum(pZ_X[:,k])# complete this line\n",
+    "            pZ=np.reshape(pZ_X[:,k],[N,1])\n",
+    "            Means[k,:] = Means[k,:] = (X*pZ).sum(axis=0)/sum(pZ_X[:,k])# complete this line\n",
     "            \n",
     "            #Sigs\n",
     "            xDiff = X-MeansOld[k,:]            \n",
